--- a/utms.html
+++ b/utms.html
@@ -16,7 +16,8 @@
     </form>
     
     <script>
-           
+            // Documentation
+            // https://www.simoahava.com/custom-templates/persist-campaign-data/
             // const url = new URL("https://outsetstage.wpengine.com/patients/?utm_source=Fido&utm_medium=cellphone&utm_campaign=summer");
             //     const params = new URLSearchParams(url);
             //     url.searchParams.forEach(function (val, key) {
